--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -42,6 +42,7 @@
   border-radius: 10%;
   color: transparent;
   line-height: 14px;
+  text-align: left;
   margin: 4px 4px 0px 0px;
 }
 .form__checkbox:checked + .form__label:before {
@@ -63,6 +64,10 @@
   font-size: 1rem;
   line-height: 1.5rem;
   background: #aa0601;
+  border: none;
+}
+.form__submit:hover {
+  background: #650300;
 }
 
 @media (max-width: 991px) {
